--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -46,6 +46,11 @@
 <br>
 
 
+<div class="container2">
+  <h4><a href="">
+   TIENDA VIRTUAL ISI
+  </a></h4>
+</div>
 
 <div class="wrap">
 		<div class="tarjeta-wrap">
@@ -65,7 +70,7 @@
 				<div class="atras">
          <h1>VISION</h1>
         <br>
-					<p>Crecimiento mediante la constante inovacion y adquisicion de tecnologia que permita mejorar la efectividad</p>
+					<p>Crecimiento mediante la constante innovacion y adquisicion de tecnologia que permita mejorar la efectividad</p>
 				</div>
 			</div>
 		</div>
@@ -74,7 +79,7 @@
 				<div class="adelante card3"></div>
 				<div class="atras">
         <h1>VALORES</h1>
-					<p>Trato justo y correcto hacia nuestros clientes pra fomentar dureciones duraderascon ellos.</p>
+					<p>Trato justo y correcto hacia nuestros clientes.</p>
 				</div>
 			</div>
 		</div>
@@ -83,6 +88,33 @@
 <br>
 <br>
 
+ <div class="container">
+    <div class="row">
+      <div class="col-sm-5">
+        <div class="section-1">
+          <div class="container text-center">
+
+             <section id="top">
+             <div align="center"><font color="#FFFFFF" size="+1"><marquee bgcolor="#000000" direction="right" loop="20">Ultimas tendencias en moda </marquee></font></div>
+           </section>
+
+
+          <p>
+           En tienda ISI  ponemos a tu disposición las tendencias más rompedoras en moda ya que somos una marca de ropa de mujer que se preocupa por innovar y ajustarse rápidamente a las modas actuales. Es por ello que todas las semanas incorporamos novedades a nuestra tienda online. Asimismo, cada semana lanzamos nuevas ofertas que te permiten comprar prendas y complementos rebajados.
+               
+      </div>
+    </div>
+    </div>
+      <div class="col-sm-6">
+        <img src="https://pentacredit.com/uploads/blog/post/200019_tarjetas-comprar-por-internet.jpg" class="img-fluid" alt="">
+      </div>
+    </div>
+  </div>
+
+<br>
+<br>
+
+<br>
 <div class="container">
     <div class="row">
       <div class="col-sm-6">
@@ -94,52 +126,22 @@
           <div class="container text-center">
 
            <section id="top">
-             <h1> </h1>
-             <h2 class="heading-1">Nuestra Tienda en La Paz </h2>
+             <div align="center"><font color="#FFFFFF" size="+1"><marquee bgcolor="#000000" direction="right" loop="20">Tendencia en moda de marcas reconocidas</marquee></font></div>
            </section>
 
           <p>
-            En la zona turística de la ciudad de La Paz en Bolivia usted encontrará
-            nuestra tienda. Tienda de Artesanias ISI vende artesanías 100% bolivianas, hechas a mano, y de comercio justo.
-           Tambien ingrese a la tienda virtual ISI, regístrese como nuestro cliente y acceda al catálogo de los mas novedosos productos que ofrecemos
+           En nuestra tienda online puedes encontrar cada día artículos nuevos de marcas que dictan tendencia como Adidas, Converse, Nike o Calvin Klein, así como también exclusivas prendas de tus marcas de lujo favoritas. Ingresa ya y no te pierdas las ofertas Black Friday que tendremos para ti muy pronto, ¡con descuentos de hasta el 80%!
       </div>
     </div>
     </div>
     </div>
   </div>
-  <div class="containerbien">
-        <div class="box">
-            <a href="#">
-                <img src="assets/img/prenda1.jpeg">
-                <div class="capa">
-                    <h2>Polera blanca</h2>
-                </div>
-            </a>
-        </div>
-        
-        <div class="box">
-            <a href="#">
-                <img src="assets/img/prenda3.jpeg">
-                <div class="capa">
-                    <h2>Canguro Nike</h2>
-                </div>
-            </a>
-        </div>
-        
-        <div class="box">
-            <a href="#">
-                <img src="assets/img/prenda4.jpeg">
-                <div class="capa">
-                    <h2>Canguro Adidas</h2>
-                </div>
-            </a>
-        </div>
-    </div>
 
+<br>
+<br>
 
-
-
-
+<br>
+<br>
 
 
  <div class="container">
@@ -148,82 +150,138 @@
         <div class="section-1">
           <div class="container text-center">
 
-           <section id="top">
-             <h1> </h1>
-             <h2 class="heading-1">La importancia del comercio artesanal</h2>
+             <section id="top">
+             <div align="center"><font color="#FFFFFF" size="+1"><marquee bgcolor="#000000" direction="right" loop="20">Ultimas tendencias en moda </marquee></font></div>
            </section>
 
+
           <p>
-            Tienda ISI tiene dos estatus dentro de WFTO, la de miembro que nos
-             identifica con el movimiento de comercio justo y la de organización garantizada FT,
-              que significa que hemos demostrado que los principios de cumplen cabalmente en toda
-              la cadena de comercialización y produccción. La importancia va de dos lados; la del cliente
-               y la del productor
-               
+           Tienda ISI ofrece un probador virtual, así los clientes  tiene una idea más clara del producto y ayuda a decidir cuál queremos adquirir o si sólo queremos imaginar cómo se nos verían. Para ello, simplemente tenemos que apuntar la cámara  y automáticamente la ropa  se adaptarán a nuestras dimensiones.       
       </div>
     </div>
     </div>
       <div class="col-sm-6">
-        <img src="https://pentacredit.com/uploads/blog/post/200019_tarjetas-comprar-por-internet.jpg" class="img-fluid" alt="">
+       <img src="https://remanagers.es/wp-content/uploads/2021/09/articulo-borja.jpg" class="img-fluid" alt="">
       </div>
     </div>
   </div>
 
-  
 
 
-  <section id="portfolio" class="portfolio">
-    <div class="container" data-aos="fade-up">
-      <div class="section-header">
-        <h3 class="section-title">Novedades</h3>
-        <p class="section-description">Estas son nuestras ultimas Novedades de artesanias ISI.</p>
-      </div>
 
-      <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app" [routerLink]="['/products/category', 1]">
-          <img src="../../../assets/img/prod5.jpeg" class="img-fluid" alt="">
+
+
+
+ <div class="container__card">
+
+            <div class="card__father">
+                <div class="card">
+                    <div class="card__front" style="background-image: url(assets/img/prenda1.jpeg);">
+                        <div class="bg"></div>
+                        <div class="body__card_front">
+                            <h1>Polera Blanca.</h1>
+                        </div>
+                    </div>
+                    <div class="card__back">
+                        <div class="body__card_back">
+                            
+                             <p>Visita nuestro catalogo de productos, Scannea el codigo QR y pruebate virtualmente</p>
+                           
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card__father">
+                <div class="card">
+                    <div class="card__front" style="background-image: url(assets/img/prenda4.jpeg);">
+                        <div class="bg"></div>
+                        <div class="body__card_front">
+                            <h1>Canguro Nike.</h1>
+                        </div>
+                    </div>
+                    <div class="card__back">
+                        <div class="body__card_back">
+                            
+                            <p>Visita nuestro catalogo de productos, Scannea el codigo QR y pruebate virtualmente</p>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+          <div class="card__father">
+                <div class="card">
+                    <div class="card__front" style="background-image: url(assets/img/prenda3.jpeg);">
+                        <div class="bg"></div>
+                        <div class="body__card_front">
+                            <h1>Canguro Nike.</h1>
+                        </div>
+                    </div>
+                    <div class="card__back">
+                        <div class="body__card_back">
+                            
+                            <p>Visita nuestro catalogo de productos, Scannea el codigo QR y pruebate virtualmente</p>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card__father">
+                <div class="card">
+                    <div class="card__front" style="background-image: url(assets/img/animacion3.jpg);">
+                        <div class="bg"></div>
+                        <div class="body__card_front">
+                            <h1>Canguro Nike.</h1>
+                        </div>
+                    </div>
+                    <div class="card__back">
+                        <div class="body__card_back">
+                            
+                            <p>Visita nuestro catalogo de productos, Scannea el codigo QR y pruebate virtualmente</p>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card__father">
+                <div class="card">
+                    <div class="card__front" style="background-image: url(assets/img/animacion.jpg);">
+                        <div class="bg"></div>
+                        <div class="body__card_front">
+                            <h1>Canguro Nike.</h1>
+                        </div>
+                    </div>
+                    <div class="card__back">
+                        <div class="body__card_back">
+                            
+                            <p>Visita nuestro catalogo de productos, Scannea el codigo QR y pruebate virtualmente</p>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card__father">
+                <div class="card">
+                    <div class="card__front" style="background-image: url(assets/img/animacion2.jpg);">
+                        <div class="bg"></div>
+                        <div class="body__card_front">
+                            <h1>Canguro Adidas.</h1>
+                        </div>
+                    </div>
+                    <div class="card__back">
+                        <div class="body__card_back">
+                           
+                            <p>Visita nuestro catalogo de productos, Scannea el codigo QR y pruebate virtualmente</p>
+                           
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-web" [routerLink]="['/products/category', 2]">
-          <img src="../../../assets/img/prod21.jpeg" class="img-fluid" alt="">
-
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app" [routerLink]="['/products/category', 5]">
-          <img src="../../../assets/img/prod8.jpeg" class="img-fluid" alt="">
-
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-web" [routerLink]="['/products/category', 3]">
-          <img src="../../../assets/img/prod12.jpeg" class="img-fluid" alt="">
-
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app" [routerLink]="['/products/category', 4]">
-          <img src=".../../../assets/img/prod15.jpeg" class="img-fluid" alt="">
-
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app" [routerLink]="['/products']">
-          <img src="../../../assets/img/prod11.jpeg" class="img-fluid" alt="" >
-
-        </div>
-
-      </div>
-
-    </div>
-  </section>
-
-
-
-  
-
-
-
- 
-
 
 
   <section id="contact">
