--- a/src/app/components/catalogue/catalogue.component.html
+++ b/src/app/components/catalogue/catalogue.component.html
@@ -1,49 +1,59 @@
-<div class="container" data-aos="fade-up">
+<div class="container py-5 ">
 
- <!-- FILTRO POR CATEGORIA         -->
-
- <div class="col-sm-12 my-1">
-  <div class="card" style="width: 60rem;">
-    <div class="card-body">
-        <dl class="" style="margin: 20px">
-          <dt><p class="card-text">Escoge una Categoria
-              <select id = "inputSize" name="categoria" style="margin: 10px" ngModel #quantity="ngModel" name="filterCategoria" [(ngModel)]="filterCategoria">
-                <option selected value="">Todos</option>
-                <option *ngFor = "let cat of categoria" value="{{cat.categoria_id}}">{{cat.nombre}}</option>
-
-              </select>
-          </p></dt>
-        </dl>
-    </div>
+  <div class="container text-white py-5 text-center">
+    <h1 style="color: black;">Catálogo ISI</h1>
   </div>
-</div>
 
-<!-- FILTRO POR PRECIO -->
-  <div class="col-sm-12 my-1">
-    <div class="card" style="width: 60rem;">
-      <div class="card-body">
-        <ng5-slider [(value)]="minValue" [(highValue)]="maxValue" [options]="options" name="filterPrecio" [(ngModel)]="filterPrecio" ></ng5-slider>
+  <div class="container">
+
+    <div class="row">
+      <!-- FILTRO POR PRECIO -->
+             <div class="col-6 col-sm-4"></div>
+              <div class="col-6 col-sm-12">
+                <div class="card border-light mb-3">
+                  <div class="card-body">
+                    <ng5-slider [(value)]="minValue" [(highValue)]="maxValue" [options]="options" name="filterPrecio" [(ngModel)]="filterPrecio" ></ng5-slider>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+    <div class="row">
+        <!-- FILTRO POR CATEGORIA  -->
+      <div class="col-6 col-sm-4">
+        <div class="card border-light mb-3">
+          <div class="card-body">
+              <dl class="" >
+                <dt><p class="card-text">Escoge una Categoria
+                    <select id = "inputSize" name="categoria" style="margin: 10px" ngModel #quantity="ngModel" name="filterCategoria" [(ngModel)]="filterCategoria">
+                      <option selected value="">Todos</option>
+                      <option *ngFor = "let cat of categoria" value="{{cat.categoria_id}}">{{cat.nombre}}</option>
+                    </select>
+                </p></dt>
+              </dl>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
 
 
-<!-- FILTRO POR NOMBRE   -->
-  <div class="col-sm-12 my-1">
-    <div class="card" style="width: 60rem;">
-      <div class="card-body">
-          <input class="form-control" id="nombre" type="text" placeholder="Buscar por nombre..." name="filterPost" [(ngModel)]="filterPost">
+      <div class="col-6 col-sm-8">
+           <!-- FILTRO POR NOMBRE        -->
+        <div class="card border-light mb-3" >
+          <div class="card-body">
+              <input class="form-control" id="nombre" type="text" placeholder="Buscar por nombre..." name="filterPost" [(ngModel)]="filterPost">
+          </div>
+        </div>
       </div>
-    </div>
+      </div>
+
+
   </div>
 
-</div>
-
-
-  <div class="container" data-aos="fade-up">
-    <div class="row row-cols-1 row-cols-md-3 g-4" >
-      <div class="col md 8" style="width: 18rem;" *ngFor="let product of product | filter: filterPost | filterCategoria: filterCategoria | filterPrecio: filterPrecio " >
-        <div class="card">
+<br><br>
+  <div class="container" >
+    <div class="row row-cols-1 row-cols-md-3 g-4 card-deck" >
+      <div class="col "  *ngFor="let product of product | filter: filterPost | filterCategoria: filterCategoria | filterPrecio: filterPrecio " >
+        <div class="card border-light mb-3">
           <img [src]="product.image"  class="card-img-top" class="zoom" style="width: 100%; height: 337px; object-fit: contain;"  alt="...">
 
                  <div class="card-body">
@@ -51,10 +61,10 @@
             <p class="card-text">{{product.details}}</p>
             <p class="card-text">Bs. {{product.costProduct}}</p>
 
-            <div class="card" *ngIf="product.stock>0" >
+            <div class="card border-light mb-3" *ngIf="product.stock>0" >
               <p class ="card-text" style="color:#3FC037 "> <strong>PRODUCTO DISPONIBLE</strong></p>
             </div>
-            <div class="card" *ngIf="product.stock==0" >
+            <div class="card border-light mb-3" *ngIf="product.stock==0" >
               <p class ="card-text" style="color:#F32C1B"><strong>PRODUCTO AGOTADO </strong></p>
             </div>
           </div>
@@ -66,6 +76,11 @@
 
 
 
+
+
+
+
+   </div>
 
 
 
