fixing color in product

--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -39,6 +39,7 @@
                       <div class="ml-3 d-inline-block align-middle">
                         <h5 class="mb-0"> <a class="text-dark font-wight-bolde align-middle">{{product.product_name}}</a></h5>
                         <span class="text-muted font-weight-normal font-italic d-block">Detalles: {{product.details}}</span>
+                        <span class="text-muted font-weight-normal font-italic d-block">Color: {{product.color}}</span>
                         <span class="text-muted font-weight-normal font-italic d-block">Talla: {{product.size}}</span>
 
                       </div>
@@ -65,13 +66,15 @@
 
 
     <div class="col-lg-6" style="margin-left: auto; margin-right: auto;">
+      <!--
         <div class="bg-light rounded-pill px-4 py-3 text-uppercase font-weight-bold">Resumen de la Compra </div>
         <div class="p-4">
           <ul class="list-unstyled mb-4">
             <li class="d-flex justify-content-between py-3 border-bottom"><strong class="text-muted">Total</strong>
               <h5 class="font-weight-bold">Bs. </h5>
             </li>
-          </ul><button type="submit" class="btn btn-dark rounded-pill py-2 btn-block" [routerLink]="['/card']">Comprar</button>
+          </ul>-->
+          <button type="submit" class="btn btn-dark rounded-pill py-2 btn-block" [routerLink]="['/card']">Comprar</button>
         </div>
       </div>
 
