--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -22,6 +22,7 @@
         <div class="card-body">
           <h1 class="card-title" style="margin: 10px">{{product.product_name}}</h1>
           <h5 class="card-text" style="margin: 10px">{{product.details}}</h5>
+          <h5 class="card-text" style="margin: 10px">{{product.color}}</h5>
           <h5 class="card-text" style="margin: 10px">Bs. {{product.costProduct}}</h5>
 
 
@@ -41,7 +42,7 @@
               </h5></dt>
             </dl>
 
-            
+
 
           <div  style="margin: 30px">
 
