--- a/src/app/components/products/form-product.component.html
+++ b/src/app/components/products/form-product.component.html
@@ -2,20 +2,20 @@
 
     <div class="card" style="width: 60rem;">
       <div class="card-body">
-  
+
         <div class="position-absolute start-50 translate-middle">
           <h1 class="card-title"><b>Registrar Productos</b></h1>
         </div>
-  
+
             <form  class="row g-3 pb-5 needs-validation" novalidate  >
 
 
 <div class="row">
     <div class="col-6">
-        
+
             <label for ="product_name">Producto</label>
             <input type="text" class="form-control" name="product_name" [(ngModel)]="product.product_name" ngModel required >
-        
+
 
     </div>
     <div class="col-6">
@@ -33,26 +33,26 @@
         </ng-template>
 
 
-        
-         
+
+
        </ng-template>
        <br>
-        
-        <input  id="file" name="file" (change)="postMethod($event)" type="file"/> 
+
+        <input  id="file" name="file" (change)="postMethod($event)" type="file"/>
     </div>
 </div>
 
-                
+
 
                 <div class="col-md-12 position-relative">
                     <label for ="details">Detalles</label>
                     <input type="text" class="form-control" name="details" [(ngModel)]="product.details" >
                 </div>
-            
+
                 <div class="col-md-6 position-relative">
                     <label for ="size">Talla</label>
-                   
-      
+
+
               <select id = "inputSize" name="size" style="margin: 10px" [(ngModel)]="product.size">
                 <option selected>XXS</option>
                 <option value="XS">XS</option>
@@ -63,17 +63,17 @@
                 <option value="XXL">XXL</option>
               </select>
 
-            
-            
+
+
 
 
                     <!-- <input type="text" class="form-control" name="size" [(ngModel)]="product.size" > -->
                 </div>
-                
+
 
                 <div class="col-md-6 position-relative">
                     <label for ="color">Color</label>
-                    <input type="number" class="form-control" name="color" [(ngModel)]="product.color" >
+                    <input type="text" class="form-control" name="product_name" [(ngModel)]="product.color" ngModel required >
                 </div>
 
                 <div class="col-md-6 position-relative">
@@ -85,17 +85,17 @@
                     <label for ="status" >Stock</label>
                     <input type="number" class="form-control" name="stock" [(ngModel)]="product.stock" >
                 </div>
-           
-                  
+
+
                 <div class="col-md-12 position-relative">
                     <label for ="categoria" >Categoria</label>
                     <input type="text" class="form-control" name="categoria" [(ngModel)]="product.categoria_categoria_id" >
                 </div>
 
-            
+
             <!-- <button class="btn btn-success" role="button" (click)='create()' *ngIf="!product.product_id else elseBlock">Agregar</button> -->
             <!-- <div class="custom-file">
-                <input type="file" class="custom-file-input" id="imagen" #imagenInputFile  
+                <input type="file" class="custom-file-input" id="imagen" #imagenInputFile
                 (change)="selectFiles($event)" accept="image/png, image/jpeg, image/gif">
                 <label class="custom-file-label" for="imagen">Elige una imagen</label>
             </div>
@@ -108,15 +108,15 @@
 
             <div class="col-md-6 " class="text-center well">
                 <div class="position top-50 start-50">
-    
+
                         <button class="btn btn-dark" style="margin: 10px" type="button" [routerLink]="['/products']">Atrás</button>
-    
+
                         <button class="btn btn-success" style="margin: 10px" type="submit" role="button" (click)='create()'*ngIf="!product.product_id else elseBlock">Crear producto</button>
                         <ng-template #elseBlock>
                             <button class="btn btn-success" style="margin: 10px" type="submit" role="button" (click)='update()'>Actualizar</button>
                         </ng-template>
-    
-    
+
+
                 </div>
             </div>
         </form>
