--- a/src/app/components/pedidos-admin/pedidos-admin.component.html
+++ b/src/app/components/pedidos-admin/pedidos-admin.component.html
@@ -2,18 +2,18 @@
 
     <div class="container text-white py-5 text-center">
       <h1 style="color: black;">Administracion de Pedidos de Fabricacion</h1>
-      
+
     </div>
-  
+
     <div class="pb-5">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 p-5 bg-white rounded shadow-sm mb-5">
-  
+
             <div class="table-responsive " style="font-size: 16px;">
-  
+
               <table class="table align-middle">
-  
+
                 <thead>
                   <tr>
                     <th scope="col" class="border-0 bg-dark">
@@ -28,30 +28,30 @@
                     <th scope="col" class="border-0 bg-dark">
                       <div class="py-2 text-uppercase" style="color: white;">Accion</div>
                     </th>
-              
+
                   </tr>
                 </thead>
-  
-  
-                <tbody *ngFor="let pedido of pedido"> 
+
+
+                <tbody *ngFor="let pedido of pedido">
                   <tr>
                     <th scope="row" class="border-0">
                       <div class="py-2">
                         <img src="https://cdn.shopify.com/s/files/1/0028/9597/0349/products/BLUSA8_1024x.jpg" width="70" class="img-fluid rounded shadow-sm" alt="" >
                         <div class="ml-3 d-inline-block align-middle">
                           <h5 class="mb-0"> <a class="text-dark font-wight-bolde align-middle">{{pedido.product_id}}</a></h5>
-                          
-        
+
+
                           <span class="text-muted font-weight-normal font-italic d-block" *ngFor = "let nombre of products">Talla: {{pedido.user_id}}</span>
-                          <span class="text-muted font-weight-normal font-italic d-block">Color: {{pedido.order_status_status_id}}</span>
+                          <span class="text-muted font-weight-normal font-italic d-block">Color: {{pedido.color}}</span>
                         </div>
                       </div>
                     </th>
                     <td class="border-0 align-middle"><strong> {{pedido.cantidad}}</strong></td>
-                 
+
                       <TD><dl class="" style="margin: 10px">
                         <dt><h5 class="card-text" for ="size">
-          
+
                           <select id = "inputstatus" name="status" style="margin: 10px" [(ngModel)]="pedido.order_status_status_id ">
                             <option (click)= "cargar(pedido.order_id,1)" value="1" >PENDIENTE</option>
                             <option (click)= "cargar(pedido.order_id,2)" value="2">ACEPTADO</option>
@@ -63,10 +63,10 @@
                       </dl></TD>
 
 
-                    
+
                     <div>
 
-              
+
                       <button class="btn btn-success" style="margin: 10px" type="btnEdit" [routerLink]="['/catalogue/product-details',pedido.product_id]">Editar</button>
                       <button  name="btnDelete" style="margin: 10px"  class="btn btn-danger"
                       mwlConfirmationPopover
@@ -75,15 +75,15 @@
                       placement= "left"
                       (confirm)="delete(pedido)"
                       (cancel)= "cancelClicked = true">Eliminar</button>
-           
+
                      </div>
-                     
 
 
 
 
 
-                
+
+
                   </tr>
                 </tbody>
               </table>
@@ -93,5 +93,4 @@
 
       </div>
     </div>
-  
-  
+
