--- a/src/app/components/probador-virtual/probador-virtual.component.html
+++ b/src/app/components/probador-virtual/probador-virtual.component.html
@@ -41,7 +41,7 @@
           <h3 class="card-title">Paso 2</h3>
           <p class="card-text">
             <font [size]="4.5">
-             Desde nuestor catálogo, elija la prenda que más le guste y escanee el código QR
+             Desde nuestro catálogo, elija la prenda que más le guste y escanee el código QR
             </font>
           </p>
         </div>
