--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -18,7 +18,7 @@
 
         </ul>
       </div>
-
+<!--
 
    <li class="nav-item">
             <a class="nav-link active" aria-current="page" [routerLink]="['/products']">Productos
@@ -38,6 +38,7 @@
 
             </a>
           </li>
+        -->
 
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
@@ -64,7 +65,7 @@
           </li>
         </ul>
 
-
+<!--
   <li class="nav-item">
             <a class="nav-link active" aria-current="page" [routerLink]="['/user-admin']">Usuarios
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-people-fill" viewBox="0 0 16 16">
@@ -107,9 +108,7 @@
 
             </a>
           </li>
-
-
-
+  -->
     </div>
 
              <!--*********************************************************************************-->
@@ -135,7 +134,7 @@
 
     <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
-
+<!--
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" [routerLink]="['/more-order']">Reporte productos más pedidos
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list-columns" viewBox="0 0 16 16">
@@ -182,6 +181,7 @@
     </svg>
   </a>
 </li>
+-->
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" [routerLink]="['/cart']">Carrito
 
@@ -191,9 +191,9 @@
 
                 </a>
               </li>
-
+<!--
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" [routerLink]="['/profile-client']">Cuenta
+                <a class="nav-link active" aria-current="page" [routerLink]="['/account-info']">Cuenta
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-bounding-box" viewBox="0 0 16 16">
                         <path d="M1.5 1a.5.5 0 0 0-.5.5v3a.5.5 0 0 1-1 0v-3A1.5 1.5 0 0 1 1.5 0h3a.5.5 0 0 1 0 1h-3zM11 .5a.5.5 0 0 1 .5-.5h3A1.5 1.5 0 0 1 16 1.5v3a.5.5 0 0 1-1 0v-3a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 1-.5-.5zM.5 11a.5.5 0 0 1 .5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 1 0 1h-3A1.5 1.5 0 0 1 0 14.5v-3a.5.5 0 0 1 .5-.5zm15 0a.5.5 0 0 1 .5.5v3a1.5 1.5 0 0 1-1.5 1.5h-3a.5.5 0 0 1 0-1h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 1 .5-.5z"/>
                         <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm8-9a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
@@ -202,7 +202,7 @@
                 </a>
               </li>
 
-
+-->
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" [routerLink]="['/user-login']">Log Out
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
